sandbox/output
TicketDispenserTest.java:10: error: cannot find symbol
        assertEquals(1, newTicket.getTurnNumber() - previousTicket.getTurnNumber());
                        ^
  symbol:   variable newTicket
  location: class TicketDispenserTest
TicketDispenserTest.java:10: error: cannot find symbol
        assertEquals(1, newTicket.getTurnNumber() - previousTicket.getTurnNumber());
                                                    ^
  symbol:   variable previousTicket
  location: class TicketDispenserTest
2 errors
